# NetworkProgramming

./: CMakeLists.txt  main.cpp
client-channel/: ClientChannel.cpp  ClientChannel.h  ClientController.cpp  ClientController.h  IChannel.h  IChannelObserver.h
client-pseudo/: ClientPseudo.cpp  ClientPseudo.hpp  client_main.cpp
memory_handler/: MemoryHandler.hpp
room/: Participant.h  Room.cpp  Room.hpp
server-asio/: AllocatorHandler.cpp  AllocatorHandler.h  ChatParticipant.h  ChatRoom.cpp  ChatRoom.hpp  ChatServer.cpp  ChatServer.hpp  ChatSession.cpp  ChatSession.hpp  CustomAllocHandler.h  MemoryHandler.cpp  MemoryHandler.h  Participant.h  Room.cpp  Room.hpp  ServerAsio.cpp  ServerAsio.hpp  ServerAsioAllocation.cpp  ServerAsioAllocation.h  ServerAsioAllocation.hpp  Session.cpp  Session.hpp  server_asio_main.cpp
server-posix/: PosixSession.cpp  PosixSession.hpp  PosixSyncSession.cpp  PosixSyncSession.hpp  ServerPosix.cpp  ServerPosix.h  ServerPosix.hpp  ServerPosixAsync.cpp  ServerPosixAsync.hpp  ServerPosixFork.cpp  ServerPosixFork.h  ServerPosixPreFork.cpp  ServerPosixPreFork.h  ServerPosixPreForkDescriptorPass.cpp  ServerPosixPreForkDescriptorPass.h  ServerPosixPreThread.cpp  ServerPosixPreThread.h  ServerPosixSync.cpp  ServerPosixSync.hpp  ServerPosixThread.cpp  ServerPosixThread.h  server_posix_main.cpp  server_posix_sync_main.cpp
socket/: Connection.cpp  Connection.hpp  Socket.cpp  Socket.hpp
